--- a/browseProducts.html
+++ b/browseProducts.html
@@ -10,11 +10,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./browseProduct.css">
+    <link rel="stylesheet" href="./home.css">
   </head>
   <body>
 
     <!-----------------navbar--------------------->
-    <div id="navbar"></div>
+    <div id="cont"></div>
 
     <!-----------------return to homepage--------------------->
     <div>
@@ -281,11 +282,24 @@
     
     </div>
   </div>
+  <div id="foot"></div>
 
 
 
 </html>
 
+
+<script type="module">
+  import navbar from "./components/navbar.js";
+  let cont = document.getElementById("cont");
+  cont.innerHTML = navbar();
+
+  import footer from "./components/footer.js";
+  document.getElementById("foot").innerHTML = footer();
+
+
+
+</script>
 <script src= "./browseProduct.js">
 
 
